Fix double scrollbar

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,12 +1,10 @@
-body {
+html {
     background: rgb(243, 243, 243) !important;
     overflow-y: scroll; /* has to be scroll, not auto */
     -webkit-overflow-scrolling: touch;
     overflow-x: hidden;
 }
-html {
-    overflow-x: hidden;
-}
+
 #logo {
     color: #2571B3;
     font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
